[package]
name = "http-bytes"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.17"
httparse = "1.3.3"
bytes = "0.4.12"
base64 = { version = "0.10.1", optional = true }

[features]
default = ["basicauth"]
basicauth = ["base64"]
